--- a/src/component/carousel/index.scss
+++ b/src/component/carousel/index.scss
@@ -1,45 +1,51 @@
 @import url('https://fonts.googleapis.com/css2?family=GFS+Didot&display=swap');
 
 
-.carousel {
-    width: 100%;
-    height: 80dvh;
-    object-fit: cover;
-    object-position: top;
+// .carousel {
+//     width: 100%;
+//     height: 80dvh;
+//     object-fit: cover;
+//     object-position: top;
 
-    img{
-        position: absolute;
-        top: 0;
-        bottom: 0;
-        left: 0;
-        right: 0;
-        width: 100%;
-        height: 100%;
-        transform: scale(1.4);
-    }
+//     img{
+//         position: absolute;
+//         top: 0;
+//         bottom: 0;
+//         left: 0;
+//         right: 0;
+//         width: 100%;
+//         height: 100%;
+//         transform: scale(1.4);
+//     }
 
-    .gr_pic{
-        display: flex;
-        align-items: center;
-        position: relative;
-        z-index: 1000000;
-    }
+//     .gr_pic{
+//         display: flex;
+//         align-items: center;
+//         position: relative;
+//         z-index: 1000000;
+//     }
 
-    .poster{
-        display: flex; 
-        align-items: center;
-        justify-content: center;
-        overflow: hidden;
-        position: relative;
-        height: 1000px;
-        width: 100vw;
-    }
+//     .poster{
+//         display: flex; 
+//         align-items: center;
+//         justify-content: center;
+//         overflow: hidden;
+//         position: relative;
+//         height: 1000px;
+//         width: 100vw;
+//     }
 
+// }
+
+
+// .cate_tittle{
+//     padding: 10px;
+// }
+
+ .swiper-button-next{
+    color: rgb(172, 113, 88);
 }
 
-
-.cate_tittle{
-    padding: 10px;
+.swiper-button-prev{
+    color: rgb(172, 113, 88);
 }
-
-
