update-code-profile

--- a/src/Page/Profile/Profile.module.scss
+++ b/src/Page/Profile/Profile.module.scss
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=Flamenco');
 
 .container {
-    font-family: 'Flamenco', sans-serif;
+    // font-family: 'Flamenco', sans-serif;
     padding-top: 50px;
     padding-left: 100px;
     margin-bottom: 80px;
@@ -77,12 +77,26 @@
     margin-left: 50px;
 }
 
+.infoItem_p{
+    border-bottom: 1px solid;
+    width: 400px;
+    height: 35px;
+    font-size: 22px;
+}
+
+.infoItem_span {
+    margin-right: 20px;
+}
+
 .fontstyle {
     font-size: 25px;
     font-weight: 1000;
     color: #B18165;
     margin-bottom: 50px;
 }
+
+
+
 
 .buttonPosition {
     display: flex;
@@ -133,8 +147,29 @@
     color: #8B0000; /* Màu chữ là màu đỏ đậm hơn và trầm hơn */
 }
 .favoriteItem {
+    margin-top: 20px;
     display: flex;
     align-items: center;
+    justify-content: space-between // cách đều 2 bên màn hình nhe
+}
+.favoriteItem_Img {
+    
+}
+.favoriteItem_Name_Item{
+    // margin-top: 145px;
+    // margin-right: 300px;
+    // margin-bottom: 10px;
+  justify-content: space-between;
+  align-items: center;
+  margin-right: 400px;
+
+}
+.favoriteItem_Name_Item_P{
+    display: flex;
+}
+
+.favoriteItem_Info{
+    margin-right: 90px;
 }
 
 .favoriteButton {
@@ -145,6 +180,7 @@
     cursor: pointer;
     border-radius: 10px; /* Round the button */
     transition: background-color 0.3s ease; /* Smooth background color transition */
+    margin-top: 100px;
 }
 
 .favoriteButton:hover {
@@ -155,4 +191,57 @@
 
 .likeIcon {
     cursor: pointer;
+}
+
+
+.orderHistorySection {
+    background-color: #f9f9f9;
+    padding: 20px;
+    border-radius: 5px;
+    justify-content: center;
+    align-items: center;
+}
+
+.orderFilter {
+    display: flex;
+    margin-bottom: 40px;
+    justify-content: center;
+    align-items: center;
+}
+
+.orderFilter button {
+    background-color: #fff;
+    border: 1px solid #ccc;
+    padding: 10px 20px;
+    cursor: pointer;
+    margin-right: 10px;
+    border-radius: 8px;
+}
+
+.orderFilter button:not(.active):hover {
+    background-color: #dac4b7;
+    font-weight: bold; 
+    font-size: 20px;
+}
+.orderFilter .active  {
+    background-color: #B18165;
+    color: white;
+    
+}
+
+
+.ordersList {
+    display: flex;
+    flex-direction: column;
+}
+
+.orderDetails {
+    display: flex;
+    margin-bottom: 20px;
+}
+
+.orderImage {
+    width: 200px;
+    height: 170px;
+    margin-right: 20px;
 }
