--- a/src/component/goldPrice/index.scss
+++ b/src/component/goldPrice/index.scss
@@ -1,3 +1,6 @@
+
+
+.gp_tb{
 .ant-table-thead .ant-table-cell{
     background-color: #971517 !important;
     text-align: center;
@@ -13,4 +16,5 @@ th.ant-table-cell{
     font-size: 20px;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     color: #e9a71d !important;
+}
 }
