fix layout page goldprice, productDetail in darkmode, update page aboutUs

--- a/src/Page/product/productDetail/index.scss
+++ b/src/Page/product/productDetail/index.scss
@@ -21,3 +21,10 @@
         height: 450px;
     }
 }
+
+// div.ant-collapse-header{
+//     .ant-collapse-header-text{
+//         color: #fff;
+//     }
+// }
+
