--- a/src/component/carousel/index.scss
+++ b/src/component/carousel/index.scss
@@ -1,4 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=GFS+Didot&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400..700;1,400..700&display=swap');
 
 .swiper-button-next{
     color: rgb(172, 113, 88);
@@ -6,4 +7,10 @@
 
 .swiper-button-prev{
     color: rgb(172, 113, 88);
+}
+
+.poster{
+    h1{
+        font-family: Lora;
+    }
 }
