--- a/src/Page/product/all/index.scss
+++ b/src/Page/product/all/index.scss
@@ -29,3 +29,12 @@ h1.title_3{
         border-color: #7c7c7c;
     }
 }
+
+img.poster{
+    height: 600px;
+}
+
+// .swiperNhan{
+//     display: flex;
+//     justify-content: center;
+// }
