--- a/src/Page/about/index.scss
+++ b/src/Page/about/index.scss
@@ -9,7 +9,7 @@
 
     h1{
         position: absolute;
-        left: 50px;
+        left: 8%;
         top: 200px;
         font-family: 'Times New Roman', Times, serif;
         font-family: Playfair Display SC;
@@ -20,7 +20,7 @@
         position: absolute;
         top: 280px;
         width: 45%;
-        left: 50px;
+        left: 8%;
         color: #fff;
     }
     .playfair-display-sc-bold {
