--- a/src/Page/product/eachProduct/index.scss
+++ b/src/Page/product/eachProduct/index.scss
@@ -16,41 +16,13 @@ h1.title_3{
 }
 
 .card-list:has(.ant-col:hover) .ant-col:not(:hover) {
-    filter: blur(4px)
+    filter: blur(3px)
 }
 
-
-
-//   h3 {
-//     font-size: 1.2rem;
-//     margin: 0;
-//   }
-
-//   .card-list {
-//     display: grid;
-//     grid-template-columns: 1fr 1fr 1fr;
-//     gap: 1rem;
-//     margin: 0;
-//     padding: 0;
-//   }
-
-
-//   .ant-col {
-//     margin: 0;
-//     transition: all 150ms ease-in-out;
-//   }
-  
-//   .ant-col::before {
-//     content: "";
-//   }
-  
-//   img {
-//     display: block;
-//     min-width: 0;
-//     width: 100%;
-//     margin-bottom: .6rem;
-//   }
-
-  .paper {
+.paper {
     padding: 1.5rem;
-  }
+}
+
+.align_name{
+    left: 10%;
+}
