--- a/src/Page/product/productDetail/index.scss
+++ b/src/Page/product/productDetail/index.scss
@@ -19,8 +19,18 @@
 .img_pd{
     img{
         height: 450px;
+        width: 100%;
     }
 }
+
+
+h1.title_3{
+    font-family: "Fraunces", serif;;
+}
+
+// .content_fix{
+//     white-space: ;
+// }
 
 // div.ant-collapse-header{
 //     .ant-collapse-header-text{
