Update 2 page price

--- a/src/Page/goldPrice/index.scss
+++ b/src/Page/goldPrice/index.scss
@@ -1,3 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Bona+Nova+SC:ital,wght@0,400;0,700;1,400&family=Montserrat:ital,wght@0,600;1,600&display=swap');
+
+
+h1{
+    font-family: "Bona Nova SC", serif;
+}
+
+
+
 .gp_tb{
     .ant-table-thead .ant-table-cell{
         background-color: #971517 !important;
