update page admin, revenue page

--- a/src/Page/admin/revenue/index.scss
+++ b/src/Page/admin/revenue/index.scss
@@ -13,3 +13,11 @@
         width: 10;
     }
 }
+
+div.ant-table-wrapper{
+    width: 300px !important;
+}
+
+.table-staff .ant-table-wrapper{
+    width: 90% !important;
+}
