complete design revenue page

--- a/src/Page/admin/revenue/index.scss
+++ b/src/Page/admin/revenue/index.scss
@@ -14,8 +14,8 @@
     }
 }
 
-div.ant-table-wrapper{
-    width: 300px !important;
+div.ant-table-wrapper.table-revenue{
+    width: 400px !important;
 }
 
 .table-staff .ant-table-wrapper{
