--- a/src/Page/Profile/Profile.module.scss
+++ b/src/Page/Profile/Profile.module.scss
@@ -15,7 +15,7 @@
     font-weight: 400;
     text-shadow: 1px 0 0 #000, 0 1px 0 #000, -1px 0 0 #000, 0 -1px 0 #000;
     margin-left: 50px;
-    margin-bottom: 50px;
+    margin-bottom: 35px;
     padding-top: 5px;
 }
 
@@ -31,7 +31,7 @@
     list-style: none;
     padding: 0;
     text-align: center;
-
+    margin-top: 50px;
    
 }
 
@@ -243,7 +243,7 @@
 
 
 .orderHistorySection {
-    background-color: #f9f9f9;
+    background-color: white; //#f9f9f9
     padding: 20px;
     border-radius: 5px;
     justify-content: center;
@@ -255,7 +255,8 @@
     margin-bottom: 40px;
     justify-content: center;
     align-items: center;
-    
+    margin-bottom: 40px;
+    margin-top: -80px; 
 }
 
 .orderFilter button {
@@ -283,7 +284,7 @@
     display: flex;
     flex-direction: column;
     border-color: #000;
-    border: 10px;
+
 }
 
 .orderDetails {
@@ -291,7 +292,10 @@
     align-items: center;
     margin-bottom: 20px;
     position: relative; /* Ensure positioning context for absolute positioning */
-   
+    border: solid 0.02px;
+    padding: 4px;
+    box-shadow: 5px 7px 5px 5px #cccaca;
+    background-color: #f9f9f9;
 }
 .orderInfo {
     flex: 2;
@@ -365,6 +369,14 @@
     background-color: #dc3545; /* Màu nền cho trạng thái "Cancelled" */
 }
 
+.notFoundStatusHistory {
+    font-weight: bold;
+    text-align: center;
+    justify-content: center;
+    font-size: 30px;
+    color: #333;
+    margin-top: 80px;
+}
 
 .pagination {
     display: flex;
@@ -394,3 +406,5 @@
     cursor: default;
     opacity: 0.6;
 }
+
+
