gan api, create form pgae

--- a/src/Page/admin/revenue/index.scss
+++ b/src/Page/admin/revenue/index.scss
@@ -15,9 +15,13 @@
 }
 
 div.ant-table-wrapper.table-revenue{
-    width: 400px !important;
+    width: 350px !important;
 }
 
 .table-staff .ant-table-wrapper{
     width: 90% !important;
+}
+
+.ant-tabs-tab-btn.dark *{
+    color: #fff;
 }
