fix call loop api, update page productDetail

--- a/src/Page/product/eachProduct/index.scss
+++ b/src/Page/product/eachProduct/index.scss
@@ -20,9 +20,9 @@ h1.title_3{
 }
 
 .paper {
-    padding: 1.5rem;
+    padding: 30px;
 }
 
-.align_name{
-    left: 10%;
-}
+// .align_name{
+//     left: 10%;
+// }
