--- a/src/Page/product/productDetail/index.scss
+++ b/src/Page/product/productDetail/index.scss
@@ -38,3 +38,40 @@ h1.title_3{
 //     }
 // }
 
+// tool for heart
+.tooltip {
+    position: relative;
+    display: inline-block;
+    border-bottom: 1px  black;
+  }
+  
+  .tooltip .tooltiptext {
+    visibility: hidden;
+    width: 120px;
+    background-color: #B18165;
+    color: #fff;
+    text-align: center;
+    border-radius: 6px;
+    padding: 5px 0;
+    position: absolute;
+    z-index: 1;
+    bottom: 150%;
+    left: 50%;
+    margin-left: -60px;
+    font-weight: bold;
+  }
+  
+  .tooltip .tooltiptext::after {
+    content: "";
+    position: absolute;
+    top: 100%;
+    left: 50%;
+    margin-left: -5px;
+    border-width: 5px;
+    border-style: solid;
+    border-color: #B18165 transparent transparent transparent;
+  }
+  
+  .tooltip:hover .tooltiptext {
+    visibility: visible;
+  }
