--- a/src/Page/Profile/Profile.module.scss
+++ b/src/Page/Profile/Profile.module.scss
@@ -406,6 +406,7 @@
     flex-direction: column;
     align-items: flex-end; /* Canh phải phần tóm tắt */
     padding: 10px 0;
+    margin-top: -60px;
 }
 
 .orderTotalPrice {
